<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="@string/pref_key_download_recent_app"
        android:title="@string/pref_title_download_recent_app" />

    <Preference
        android:key="@string/pref_key_db_reset"
        android:title="@string/pref_title_db_reset" />

    <PreferenceCategory
        android:title="@string/pref_category_info">

        <Preference
            android:key="@string/pref_key_db_version"
            android:title="@string/pref_title_db_version"
            android:summary="0" />

        <Preference
            android:key="@string/pref_key_app_version"
            android:title="@string/pref_title_app_version"
            android:summary="0.0.0" />

        <Preference
            android:key="@string/pref_key_app_id"
            android:title="@string/pref_title_app_id"
            android:summary="abcd" />

        <Preference
            android:key="@string/pref_key_phone_number"
            android:title="@string/pref_title_phone_number"
            android:summary="010-0000-0000" />

    </PreferenceCategory>

</PreferenceScreen>
