<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingLeft="@dimen/nav_header_vertical_spacing"
    android:paddingTop="24dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/building_4"
        android:scaleType="centerCrop"
        android:contentDescription="@string/desc_building_image"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/building_title"
                android:text="@string/sub_title_description"
                android:layout_marginTop="8dp"
                style="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/toggle_description"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_alignParentRight="true"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:paddingBottom="@dimen/nav_header_vertical_spacing"
            android:paddingLeft="@dimen/nav_header_vertical_spacing"
            android:paddingRight="@dimen/nav_header_vertical_spacing"
            android:scaleType="centerInside"
            android:src="@drawable/arrow_down_drop_circle"
            style="@style/Widget.AppCompat.Button.Borderless"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_text"
        android:paddingBottom="@dimen/nav_header_vertical_spacing"
        android:paddingLeft="@dimen/nav_header_vertical_spacing"
        android:paddingRight="@dimen/nav_header_vertical_spacing"
        android:visibility="gone"
        style="@style/TextAppearance.AppCompat.Body1"/>

</LinearLayout>
